[package]
name = "feeder-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0"
atom_syndication = "0.11.0"
actix-web = "3.3.2"
log = "*"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
feeder-types = {path = "../feeder-types" }
env_logger = "*"
futures = "0.3.4"
futures-timer = "3.0.2"
